--- a/index.html
+++ b/index.html
@@ -305,6 +305,26 @@
           const [includeNumbers, setIncludeNumbers] = useState(true);
           const [copied, setCopied] = useState(false);
           const [showPassword, setShowPassword] = useState(true);
+          const [strength, setStrength] = useState({ text: 'Strong', color: 'text-green-500' });
+
+          // Dynamic Strength Calculation
+          useEffect(() => {
+             let score = 0;
+             if (password.length >= 12) score++;
+             if (/[A-Z]/.test(password) && /[a-z]/.test(password)) score++; // Mixed case
+             if (/[0-9]/.test(password)) score++;
+             if (/[^A-Za-z0-9]/.test(password)) score++;
+             
+             if (password.length < 8) {
+                setStrength({ text: 'Weak', color: 'text-red-500' });
+             } else if (score < 2) {
+                setStrength({ text: 'Weak', color: 'text-red-500' });
+             } else if (score < 4) {
+                setStrength({ text: 'Medium', color: 'text-yellow-500' });
+             } else {
+                setStrength({ text: 'Strong', color: 'text-green-500' });
+             }
+          }, [password]);
 
           const generatePassword = () => {
             let charset = 'abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ';
@@ -374,7 +394,7 @@
                 <div className="space-y-4">
                   <div className={`flex justify-between text-sm ${theme === 'light' ? 'text-gray-600' : 'text-gray-400'}`}>
                     <span>Length: {length}</span>
-                    <span>Strength: <span className="text-green-500">Strong</span></span>
+                    <span>Strength: <span className={`${strength.color} font-bold transition-colors duration-300`}>{strength.text}</span></span>
                   </div>
                   <input 
                     type="range" 
@@ -560,7 +580,7 @@
                         <div className={`space-y-6 leading-relaxed ${textPrimary}`}>
                           <p>
                             <span className="text-green-500 font-bold text-xl float-left mr-2 mt-[-6px]">"</span>
-                            Cybersecurity was not just a topic that appeared suddenly in front of me. It began as a personal curiosity back in Class 10, when I first started exploring Linux. My journey started with Ubuntu, then I started to get to know about more distros like Mint, Arch, Garuda, Kali Linux, Parrot OS, Manjaro, Zorin OS and other debian based distros. I tried them all, fascinated by how each system worked.
+                            Cybersecurity was not just a topic that appeared suddenly in front of me. It began as a personal curiosity back in Class 10, when I first started exploring Linux. My journey started with Ubuntu, then I started to get to know about more distros like Mint, Arch, BlackArch, Kali Linux, Garuda Linux, Parrot OS, Manjaro, Zorin OS and other debian based ditros. I tried them all, fascinated by how each system worked.
                           </p>
                           <p>
                             That was when I was introduced to Linux terminals. I found them very cool at first sight because they were so powerful—giving me direct control over the system. Driven by curiosity, I started experimenting, learning about Remote Access Trojans (RATs), keyloggers, phishing techniques, using basic brute force tools, and exploring webcam hacks. Although I understood very little about the deeper mechanics back then, that thrill of interacting with technology directly sparked a passion that eventually grew into a career direction.
@@ -705,5 +725,3 @@
     </script>
 </body>
 </html>
-
-
