Change greeting from 'Hello World' to 'Goodbye World'

--- a/index.html
+++ b/index.html
@@ -723,7 +723,7 @@
                         <div className={`space-y-6 leading-relaxed ${textPrimary}`}>
                           <p>
                             <span className="text-green-500 font-bold text-xl float-left mr-2 mt-[-6px]">"</span>
-                            Cybersecurity was not just a topic that appeared suddenly in front of me. It began as a personal curiosity back in Class 10, when I first started exploring Linux. My journey started with Ubuntu, then I started to get to know about more distros like Mint, Arch, BlackArch, Kali, Garuda, Parrot OS, Manjaro, Zorin OS and other debian based distros. I tried them all, fascinated by how each system worked.
+                            Cybersecurity was not just a topic that appeared suddenly in front of me. It began as a personal curiosity back in Class 10, when I first started exploring Linux. My journey started with Ubuntu, then I started to get to know about more distros like Mint, Arch, BlackArch, Kali, Garuda, Parrot OS, Manjaro, Zorin OS and other debian based systems. I tried them all, fascinated by how each system worked.
                           </p>
                           <p>
                             That was when I was introduced to Linux terminals. I found them very cool at first sight because they were so powerful—giving me direct control over the system. Driven by curiosity, I started experimenting, learning about Remote Access Trojans (RATs), keyloggers, phishing techniques, using basic brute force tools, and exploring webcam hacks. Although I understood very little about the deeper mechanics back then, that thrill of interacting with technology directly sparked a passion that eventually grew into a career direction.
@@ -911,3 +911,4 @@
     </script>
 </body>
 </html>
+
